Module 8 assignment completed
fixed error

--- a/d3-coordinated-viz/data/prepros.cfg
+++ b/d3-coordinated-viz/data/prepros.cfg
@@ -6,193 +6,9 @@
     "data": {
       "id": "",
       "cfgVersion": 2,
-      "name": "d3-demo",
+      "name": "data",
       "path": "",
-      "files": {
-        "0ffc35d4": {
-          "id": "0ffc35d4",
-          "path": "index.html",
-          "output": "index.html",
-          "name": "index.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "0c7b55b5": {
-          "id": "0c7b55b5",
-          "path": "css/style.css",
-          "output": "css/style-dist.css",
-          "name": "style.css",
-          "category": "CSS",
-          "autoCompile": false,
-          "sourceMaps": false,
-          "compress": true,
-          "cssnext": false,
-          "autoprefixer": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "css"
-        },
-        "50ef0fa9": {
-          "id": "50ef0fa9",
-          "path": "js/main.js",
-          "output": "js/main-dist.js",
-          "name": "main.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "8dda9532": {
-          "id": "8dda9532",
-          "path": "lib/API.md",
-          "output": "lib/API.html",
-          "name": "API.md",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
-        "3e9b3aa0": {
-          "id": "3e9b3aa0",
-          "path": "lib/CHANGES.md",
-          "output": "lib/CHANGES.html",
-          "name": "CHANGES.md",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
-        "c758f179": {
-          "id": "c758f179",
-          "path": "lib/d3.js",
-          "output": "lib/d3-dist.js",
-          "name": "d3.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "ff53c427": {
-          "id": "ff53c427",
-          "path": "lib/d3.min.js",
-          "output": "lib/d3.min-dist.js",
-          "name": "d3.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "51d2a8c7": {
-          "id": "51d2a8c7",
-          "path": "lib/README.md",
-          "output": "lib/README.html",
-          "name": "README.md",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
-        "4f62da2e": {
-          "id": "4f62da2e",
-          "path": "lib/LICENSE.md",
-          "output": "lib/LICENSE.html",
-          "name": "LICENSE.md",
-          "category": "HTML",
-          "autoCompile": true,
-          "sanitize": false,
-          "gfm": true,
-          "wrapWithHtml": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "markdown"
-        },
-        "977e430e": {
-          "id": "977e430e",
-          "path": "lib/topojson.min.js",
-          "output": "lib/topojson.min-dist.js",
-          "name": "topojson.min.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "a117f2ba": {
-          "id": "a117f2ba",
-          "path": "lib/topojson.js",
-          "output": "lib/topojson-dist.js",
-          "name": "topojson.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
-        "9779b492": {
-          "id": "9779b492",
-          "path": "js/test.js",
-          "output": "js/test-dist.js",
-          "name": "test.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "babel": false,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        }
-      },
+      "files": {},
       "deploymentHistory": {},
       "config": {
         "watch": "",
